mayor file re-ordering, settings hide upong changing color

--- a/blog_pages/blog_page_template.html
+++ b/blog_pages/blog_page_template.html
@@ -6,18 +6,18 @@
     <title>Semidán: Blog</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
     <link rel="stylesheet" href="/css/master.css">
-    <link rel="stylesheet" href="/css/blog.css">
+    <link rel="stylesheet" href="/css/blog_page_template.css">
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/transitions.js"></script>
-    <script src="colormode.js"></script>
+    <script src="/js/transitions.js"></script>
+    <script src="/js/colormode.js"></script>
     <script>
       $(function() {
-        $("#navbar").load("/navbar.html");
+        $("#navbar").load("navbar.html");
       });
       $(function() {
-        $("#footer").load("/credits.html");
+        $("#footer").load("credits.html");
       });
       let logo = new Image();
       logo.src = "/imgs/logo1.png";
@@ -25,19 +25,7 @@
 
   </head>
 
-
   <body>
-
-    <div id="page-container">
-      <div id="content-wrap">
-
-        <div class="navbar-container" id="navbar"></div>
-
-        <h1>Coming soon...</h1>
-      </div>
-
-      <footer id="footer"></footer>
-    </div>
 
   </body>
 </html>
