--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
 		<title>Semidán's site</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
-    <link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="/css/index.css">
 
 		<!-- Preload images -->
-		<link rel="preload" as="image" href="/imgs/github_icon_dark.png"/>
-		<link rel="preload" as="image" href="/imgs/github_icon_light.png"/>
-		<script src="colormode.js"></script>
+		<!-- <link rel="preload" as="image" href="/imgs/github_icon_dark.png"/> -->
+		<!-- <link rel="preload" as="image" href="/imgs/github_icon_light.png"/> -->
+		<script src="/js/colormode.js"></script>
 
 		<script>
 
@@ -25,7 +26,7 @@
 
 			function goToHome() {
 				setTimeout(function() {
-					window.location.href = "/home.html";
+					window.location.href = "/pages/home.html";
 			  }, 1500)
 		  }
 
