--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Semidán: Research</title>
+    <title>Semidán: Blog</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
     <link rel="stylesheet" href="/css/master.css">
-    <link rel="stylesheet" href="/css/research.css">
-    <script src="/transitions.js"></script>
-    <script src="colormode.js"></script>
+    <link rel="stylesheet" href="/css/blog.css">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="/js/transitions.js"></script>
+    <script src="/js/colormode.js"></script>
     <script>
       $(function() {
-        $("#navbar").load("/navbar.html");
+        $("#navbar").load("navbar.html");
       });
       $(function() {
-        $("#footer").load("/credits.html");
+        $("#footer").load("credits.html");
       });
       let logo = new Image();
       logo.src = "/imgs/logo1.png";
     </script>
 
   </head>
+
+
   <body>
 
     <div id="page-container">
@@ -32,7 +34,6 @@
         <div class="navbar-container" id="navbar"></div>
 
         <h1>Coming soon...</h1>
-
       </div>
 
       <footer id="footer"></footer>
