--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width">
     <title>Semidán: Contact</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/contact.css">
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/transitions.js"></script>
+    <script src="/js/transitions.js"></script>
     <script>
       $(function() {
-        $("#navbar").load("/navbar.html");
+        $("#navbar").load("navbar.html");
       });
       $(function() {
-        $("#footer").load("/credits.html");
+        $("#footer").load("credits.html");
       });
       let logo = new Image();
       logo.src = "/imgs/logo1.png";
@@ -54,6 +54,6 @@
       <footer id="footer"></footer>
     </div>
 
-    <script src="colormode.js"></script>
+    <script src="/js/colormode.js"></script>
   </body>
 </html>
