--- a/pages/home.html
+++ b/pages/home.html
@@ -11,18 +11,18 @@
 
 		<title>Semidán: Home</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
-    <link rel="stylesheet" href="css/master.css">
-		<link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="/css/master.css">
+		<link rel="stylesheet" href="/css/home.css">
 		<!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
 
-    <script src="/transitions.js"></script>
+    <script src="/js/transitions.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script>
 			$(function() {
-				$("#navbar").load("/navbar.html");
+				$("#navbar").load("navbar.html");
 			});
 			$(function() {
-				$("#footer").load("/credits.html");
+				$("#footer").load("credits.html");
 			});
 			let logo = new Image();
 			logo.src = "/imgs/logo1.png";
@@ -89,8 +89,8 @@
 
 		</div>
 
-    <script src="artwork.js"></script>
-		<script src="colormode.js"></script>
+    <script src="/js/artwork.js"></script>
+		<script src="/js/colormode.js"></script>
 
   </body>
 </html>
