--- a/pages/webapps.html
+++ b/pages/webapps.html
@@ -13,16 +13,16 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
 		<link rel="stylesheet" href="/css/master.css">
 	  <link rel="stylesheet" href="/css/webapps.css">
-		<script src="/transitions.js"></script>
-		<script src="colormode.js"></script>
+		<script src="/js/transitions.js"></script>
+		<script src="/js/colormode.js"></script>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script>
 			$(function() {
-				$("#navbar").load("/navbar.html");
+				$("#navbar").load("navbar.html");
 			});
 			$(function() {
-				$("#footer").load("/credits.html");
+				$("#footer").load("credits.html");
 			});
 			let logo = new Image();
 			logo.src = "/imgs/logo1.png";
@@ -45,49 +45,49 @@
 				<div class="grid_container">
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">The Pentagram of Venus</h1>
-						<img class="thumbnail" src="assets/pentagram.png" alt="Responsive image">
+						<img class="thumbnail" src="/assets/pentagram.png" alt="Responsive image">
 						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/VenusPentagram/" target="_blank">Deploy</a></button>
 						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/VenusPentagram" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Sudoku solver</h1>
-						<img class="thumbnail" src="assets/sudoku.png" alt="Responsive image">
+						<img class="thumbnail" src="/assets/sudoku.png" alt="Responsive image">
 						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/Sudoku/" target="_blank">Deploy</a></button>
 						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/Sudoku" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Metabolic flux orders</h1>
-						<img class="thumbnail" src="assets/fluxorders.png" alt="Responsive image">
+						<img class="thumbnail" src="/assets/fluxorders.png" alt="Responsive image">
 						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/fluxOrders/" target="_blank">Deploy</a></button>
 						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/fluxOrders" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Ayumu's game</h1>
-						<img class="thumbnail" src="assets/ayumu.png" alt="Responsive image">
+						<img class="thumbnail" src="/assets/ayumu.png" alt="Responsive image">
 						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/AyumuGame/" target="_blank">Deploy</a></button>
 						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/AyumuGame" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Simon game</h1>
-						<img class="thumbnail" src="assets/simon.png" alt="Responsive image">
+						<img class="thumbnail" src="/assets/simon.png" alt="Responsive image">
 						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/SimonGame/" target="_blank">Deploy</a></button>
 						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/SimonGame" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Colorful N-Mobius</h1>
-						<img class="thumbnail" src="assets/mobiusart.png" alt="Responsive image">
+						<img class="thumbnail" src="/assets/mobiusart.png" alt="Responsive image">
 						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/mobiusArt/" target="_blank">Deploy</a></button>
 						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/mobiusArt" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Oblate Spheroidal Coordinates</h1>
-						<img class="thumbnail" src="assets/oblatespheroidal.png" alt="Responsive image">
+						<img class="thumbnail" src="/assets/oblatespheroidal.png" alt="Responsive image">
 						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/OblateSpheroidal/" target="_blank">Deploy</a></button>
 						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/OblateSpheroidal" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Function plotter</h1>
-						<img class="thumbnail" src="assets/functionplotter.png" alt="Responsive image">
+						<img class="thumbnail" src="/assets/functionplotter.png" alt="Responsive image">
 						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/functionPlotter/" target="_blank">Deploy</a></button>
 						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/functionPlotter" target="_blank">Code</a></button>
 					</div>
