--- a/pages/about.html
+++ b/pages/about.html
@@ -10,14 +10,14 @@
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/transitions.js"></script>
-    <script src="colormode.js"></script>
+    <script src="/js/transitions.js"></script>
+    <script src="/js/colormode.js"></script>
     <script>
       $(function() {
-        $("#navbar").load("/navbar.html");
+        $("#navbar").load("navbar.html");
       });
       $(function() {
-        $("#footer").load("/credits.html");
+        $("#footer").load("credits.html");
       });
       let logo = new Image();
       logo.src = "/imgs/logo1.png";
