oook, settings icon collapses properly

--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -31,10 +31,9 @@
 <div id="navbar-line-separator"></div>
 
 <div id="settings-container">
-  <input type="checkbox" id="settings">
-  <label for="settings" id="settings-label" onclick="showSettingsOptions()">
-    <img src="/imgs/settings.png" alt="settings symbol image" id="settings-icon">
-  </label>
+
+  <img src="/imgs/settings.png" alt="settings symbol image" id="settings-icon"  onclick="expandSettingsOptions()">
+
   <div class="settings-item" id="light-mode" onclick="selectLightMode()">Light mode</div>
   <div class="settings-item" id="dark-mode" onclick="selectDarkMode()">Dark mode</div>
 
