--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 			function goToHome() {
 				setTimeout(function() {
-					window.location.href = "/pages/home.html";
-			  }, 1500)
+					window.location.href = "/pages/home";
+			  }, 2000)
 		  }
 
 		</script>
