--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -14,17 +14,17 @@
 
 <div class="navbar">
 
-  <div class="navbar-item" id="home" onclick="goToPage('home.html')">Home</div>
+  <div class="navbar-item" id="home" onclick="goToPage('home')">Home</div>
 
-  <div class="navbar-item" id="about" onclick="goToPage('about.html')">About</div>
+  <div class="navbar-item" id="about" onclick="goToPage('about')">About</div>
 
-  <div class="navbar-item" id="research" onclick="goToPage('research.html')">Research</div>
+  <div class="navbar-item" id="research" onclick="goToPage('research')">Research</div>
 
-  <div class="navbar-item" id="blog" onclick="goToPage('blog.html')">Blog</div>
+  <div class="navbar-item" id="blog" onclick="goToPage('blog')">Blog</div>
 
-  <div class="navbar-item" id="webapps" onclick="goToPage('webapps.html')">Apps</div>
+  <div class="navbar-item" id="webapps" onclick="goToPage('webapps')">Apps</div>
 
-  <div class="navbar-item" id="contact" onclick="goToPage('contact.html')">Contact</div>
+  <div class="navbar-item" id="contact" onclick="goToPage('contact')">Contact</div>
 
 </div>
 
