makes more sense to remove pages subfolder...

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 			function goToHome() {
 				setTimeout(function() {
-					window.location.href = "/pages/home";
-			  }, 2000)
+					window.location.href = "home";
+			  }, 2500)
 		  }
 
 		</script>
