renaming colormode to settings since plan to include more options

--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,6 @@
       <footer id="footer"></footer>
     </div>
 
-    <script src="/js/colormode.js"></script>
+    <script src="/js/settings.js"></script>
   </body>
 </html>
