--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
 		</div>
 
     <script src="/js/artwork.js"></script>
-		<script src="/js/colormode.js"></script>
+		<script src="/js/settings.js"></script>
 
   </body>
 </html>
