--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- <link rel="preload" as="image" href="/imgs/github_icon_dark.png"/> -->
 		<!-- <link rel="preload" as="image" href="/imgs/github_icon_light.png"/> -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="/js/colormode.js"></script>
+		<script src="/js/settings.js"></script>
 
 		<script>
 
