--- a/webapps.html
+++ b/webapps.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="/css/master.css">
 	  <link rel="stylesheet" href="/css/webapps.css">
 		<script src="/js/transitions.js"></script>
-		<script src="/js/colormode.js"></script>
+		<script src="/js/settings.js"></script>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script>
