changed webapps to apps, changed coding logo

--- a/credits.html
+++ b/credits.html
@@ -1,6 +1,6 @@
 <a href="https://github.com/Robaina/Robaina.github.io" target="_blank">
   <div id="footer-content">
-    <div class="footer-code-symbol"> < </div> <div class="footer-code-symbol"> > </div>
+    <div class="footer-code-symbol"> <</div> <div class="footer-code-symbol">/> </div>
     <div>by Semidán Robaina Estévez, 2019</div>
   </div>
 </a>
