--- a/navbar.html
+++ b/navbar.html
@@ -22,7 +22,7 @@
 
   <div class="navbar-item" id="blog" onclick="goToPage('blog')">Blog</div>
 
-  <div class="navbar-item" id="webapps" onclick="goToPage('webapps')">Apps</div>
+  <div class="navbar-item" id="webapps" onclick="goToPage('apps')">Apps</div>
 
   <div class="navbar-item" id="contact" onclick="goToPage('contact')">Contact</div>
 
