--- a/apps.html
+++ b/apps.html
@@ -12,7 +12,7 @@
 		<title>Semidán: Apps</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
 		<link rel="stylesheet" href="/css/master.css">
-	  <link rel="stylesheet" href="/css/webapps.css">
+	  <link rel="stylesheet" href="/css/apps.css">
 		<script src="/js/transitions.js"></script>
 		<script src="/js/settings.js"></script>
 
@@ -38,7 +38,7 @@
 		    <div class="navbar-container" id="navbar"></div>
 
 				<div class="intro">
-					These are some of the web apps that I have made, mostly to have fun learning HTML5, CSS and vanilla JavaScript. I will update this section with new apps if they deserve to be shown...
+					These are some of the web apps that I have made, mostly to have fun learning HTML5, CSS3 and vanilla JavaScript. I will update this section with new apps if they deserve to be shown...
 				</div>
 
 
