changed to one column grid when mobile

--- a/blog.html
+++ b/blog.html
@@ -34,6 +34,8 @@
         <div class="navbar-container" id="navbar"></div>
 
         <h1>Coming soon...</h1>
+
+        <!-- <a href="/blog-entries/about-science">Why is biology different?</a> -->
       </div>
 
       <footer id="footer"></footer>
