--- a/navbar.html
+++ b/navbar.html
@@ -14,17 +14,17 @@
 
 <div class="navbar">
 
-  <div class="navbar-item" id="home" onclick="goToPage('home')">Home</div>
+  <div class="navbar-item" id="home" onclick="goToPage('/home')">Home</div>
 
-  <div class="navbar-item" id="about" onclick="goToPage('about')">About</div>
+  <div class="navbar-item" id="about" onclick="goToPage('/about')">About</div>
 
-  <div class="navbar-item" id="research" onclick="goToPage('research')">Research</div>
+  <div class="navbar-item" id="research" onclick="goToPage('/research')">Research</div>
 
-  <div class="navbar-item" id="blog" onclick="goToPage('blog')">Blog</div>
+  <div class="navbar-item" id="blog" onclick="goToPage('/blog')">Blog</div>
 
-  <div class="navbar-item" id="webapps" onclick="goToPage('apps')">Apps</div>
+  <div class="navbar-item" id="webapps" onclick="goToPage('/apps')">Apps</div>
 
-  <div class="navbar-item" id="contact" onclick="goToPage('contact')">Contact</div>
+  <div class="navbar-item" id="contact" onclick="goToPage('/contact')">Contact</div>
 
 </div>
 
