Added navigation buttons to blog section

--- a/apps.html
+++ b/apps.html
@@ -1,103 +1,103 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="Personal webpage of Semidan Robaina Estevez">
-	  <meta name="keywords" content="web development, science">
-	  <meta name="author" content="Semidan Robaina Estevez">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="Personal webpage of Semidan Robaina Estevez">
+      <meta name="keywords" content="web development, science">
+      <meta name="author" content="Semidan Robaina Estevez">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Semidán: Apps</title>
-		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
-		<link rel="stylesheet" href="/css/master.css">
-	  <link rel="stylesheet" href="/css/apps.css">
-		<script src="/js/transitions.js"></script>
-		<script src="/js/settings.js"></script>
+        <title>Semidán: Apps</title>
+        <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
+        <link rel="stylesheet" href="/css/master.css">
+      <link rel="stylesheet" href="/css/apps.css">
+        <script src="/js/transitions.js"></script>
+        <script src="/js/settings.js"></script>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script>
-			$(function() {
-				$("#navbar").load("navbar.html");
-			});
-			$(function() {
-				$("#footer").load("credits.html");
-			});
-			let logo = new Image();
-			logo.src = "/imgs/logo1.png";
-		</script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script>
+            $(function() {
+                $("#navbar").load("/navbar.html");
+            });
+            $(function() {
+                $("#footer").load("/credits.html");
+            });
+            let logo = new Image();
+            logo.src = "/imgs/logo1.png";
+        </script>
 
-	</head>
+    </head>
 
-	<body>
+    <body>
 
-		<div id="page-container">
-			<div id="content-wrap">
+        <div id="page-container">
+            <div id="content-wrap">
 
-		    <div class="navbar-container" id="navbar"></div>
+            <div class="navbar-container" id="navbar"></div>
 
-				<div class="intro">
-					These are some of the web apps that I have made, mostly to have fun learning HTML5, CSS3 and vanilla JavaScript. I will update this section with new apps if they deserve to be shown...
-				</div>
+                <div class="intro">
+                    These are some of the web apps that I have made, mostly to have fun learning HTML5, CSS3 and vanilla JavaScript. I will update this section with new apps if they deserve to be shown...
+                </div>
 
 
-				<div class="grid_container">
-					<div class="grid_item" tabindex="0">
-						<h1 class="grid_item_title">The Pentagram of Venus</h1>
-						<img class="thumbnail" src="/imgs/pentagram.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/VenusPentagram/" target="_blank">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/VenusPentagram" target="_blank">Code</a></button>
-					</div>
-					<div class="grid_item" tabindex="0">
-						<h1 class="grid_item_title">Sudoku solver</h1>
-						<img class="thumbnail" src="/imgs/sudoku.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/Sudoku/" target="_blank">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/Sudoku" target="_blank">Code</a></button>
-					</div>
-					<div class="grid_item" tabindex="0">
-						<h1 class="grid_item_title">Metabolic flux orders</h1>
-						<img class="thumbnail" src="/imgs/fluxorders.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/fluxOrders/" target="_blank">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/fluxOrders" target="_blank">Code</a></button>
-					</div>
-					<div class="grid_item" tabindex="0">
-						<h1 class="grid_item_title">Ayumu's game</h1>
-						<img class="thumbnail" src="/imgs/ayumu.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/AyumuGame/" target="_blank">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/AyumuGame" target="_blank">Code</a></button>
-					</div>
-					<div class="grid_item" tabindex="0">
-						<h1 class="grid_item_title">Simon game</h1>
-						<img class="thumbnail" src="/imgs/simon.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/SimonGame/" target="_blank">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/SimonGame" target="_blank">Code</a></button>
-					</div>
-					<div class="grid_item" tabindex="0">
-						<h1 class="grid_item_title">Colorful N-Mobius</h1>
-						<img class="thumbnail" src="/imgs/mobiusart.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/mobiusArt/" target="_blank">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/mobiusArt" target="_blank">Code</a></button>
-					</div>
-					<div class="grid_item" tabindex="0">
-						<h1 class="grid_item_title">Oblate Spheroidal Coordinates</h1>
-						<img class="thumbnail" src="/imgs/oblatespheroidal.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/OblateSpheroidal/" target="_blank">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/OblateSpheroidal" target="_blank">Code</a></button>
-					</div>
-					<div class="grid_item" tabindex="0">
-						<h1 class="grid_item_title">Function plotter</h1>
-						<img class="thumbnail" src="/imgs/functionplotter.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/functionPlotter/" target="_blank">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/functionPlotter" target="_blank">Code</a></button>
-					</div>
+                <div class="grid_container">
+                    <div class="grid_item" tabindex="0">
+                        <h1 class="grid_item_title">The Pentagram of Venus</h1>
+                        <img class="thumbnail" src="/imgs/pentagram.png" alt="Responsive image">
+                        <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/VenusPentagram/" target="_blank">Deploy</a></button>
+                        <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/VenusPentagram" target="_blank">Code</a></button>
+                    </div>
+                    <div class="grid_item" tabindex="0">
+                        <h1 class="grid_item_title">Sudoku solver</h1>
+                        <img class="thumbnail" src="/imgs/sudoku.png" alt="Responsive image">
+                        <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/Sudoku/" target="_blank">Deploy</a></button>
+                        <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/Sudoku" target="_blank">Code</a></button>
+                    </div>
+                    <div class="grid_item" tabindex="0">
+                        <h1 class="grid_item_title">Metabolic flux orders</h1>
+                        <img class="thumbnail" src="/imgs/fluxorders.png" alt="Responsive image">
+                        <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/fluxOrders/" target="_blank">Deploy</a></button>
+                        <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/fluxOrders" target="_blank">Code</a></button>
+                    </div>
+                    <div class="grid_item" tabindex="0">
+                        <h1 class="grid_item_title">Ayumu's game</h1>
+                        <img class="thumbnail" src="/imgs/ayumu.png" alt="Responsive image">
+                        <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/AyumuGame/" target="_blank">Deploy</a></button>
+                        <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/AyumuGame" target="_blank">Code</a></button>
+                    </div>
+                    <div class="grid_item" tabindex="0">
+                        <h1 class="grid_item_title">Simon game</h1>
+                        <img class="thumbnail" src="/imgs/simon.png" alt="Responsive image">
+                        <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/SimonGame/" target="_blank">Deploy</a></button>
+                        <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/SimonGame" target="_blank">Code</a></button>
+                    </div>
+                    <div class="grid_item" tabindex="0">
+                        <h1 class="grid_item_title">Colorful N-Mobius</h1>
+                        <img class="thumbnail" src="/imgs/mobiusart.png" alt="Responsive image">
+                        <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/mobiusArt/" target="_blank">Deploy</a></button>
+                        <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/mobiusArt" target="_blank">Code</a></button>
+                    </div>
+                    <div class="grid_item" tabindex="0">
+                        <h1 class="grid_item_title">Oblate Spheroidal Coordinates</h1>
+                        <img class="thumbnail" src="/imgs/oblatespheroidal.png" alt="Responsive image">
+                        <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/OblateSpheroidal/" target="_blank">Deploy</a></button>
+                        <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/OblateSpheroidal" target="_blank">Code</a></button>
+                    </div>
+                    <div class="grid_item" tabindex="0">
+                        <h1 class="grid_item_title">Function plotter</h1>
+                        <img class="thumbnail" src="/imgs/functionplotter.png" alt="Responsive image">
+                        <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/functionPlotter/" target="_blank">Deploy</a></button>
+                        <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/functionPlotter" target="_blank">Code</a></button>
+                    </div>
 
-				</div>
+                </div>
 
-			</div>
+            </div>
 
-    	<footer id="footer"></footer>
-		</div>
+        <footer id="footer"></footer>
+        </div>
 
-	</body>
+    </body>
 </html>
