--- a/home.html
+++ b/home.html
@@ -1,96 +1,96 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="Personal webpage of Semidan Robaina Estevez">
-	  <meta name="keywords" content="web development, science">
-	  <meta name="author" content="Semidan Robaina Estevez">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="Personal webpage of Semidan Robaina Estevez">
+        <meta name="keywords" content="web development, science">
+        <meta name="author" content="Semidan Robaina Estevez">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Semidán: Home</title>
-		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
-    <link rel="stylesheet" href="/css/master.css">
-		<link rel="stylesheet" href="/css/home.css">
-		<!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
+        <title>Semidán: Home</title>
+        <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
+        <link rel="stylesheet" href="/css/master.css">
+        <link rel="stylesheet" href="/css/home.css">
+        <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
 
-    <script src="/js/transitions.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script>
-			$(function() {
-				$("#navbar").load("navbar.html");
-			});
-			$(function() {
-				$("#footer").load("credits.html");
-			});
-			let logo = new Image();
-			logo.src = "/imgs/logo1.png";
-		</script>
+        <script src="/js/transitions.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script>
+            $(function() {
+                $("#navbar").load("/navbar.html");
+            });
+            $(function() {
+                $("#footer").load("/credits.html");
+            });
+            let logo = new Image();
+            logo.src = "/imgs/logo1.png";
+        </script>
 
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131412021-1"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'UA-131412021-1');
-	</script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131412021-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-131412021-1');
+        </script>
 
-	</head>
+    </head>
 
-	<body>
+    <body>
 
-		<div id="page-container">
-			<div id="content-wrap">
+        <div id="page-container">
+            <div id="content-wrap">
 
-		    <div class="navbar-container" id="navbar"></div>
+            <div class="navbar-container" id="navbar"></div>
 
-				<div class="info">
-					<div class="myname">
-		        <div class="name-wrapper" id="name">
-							<div class="name-character">S</div>
-							<div class="name-character">e</div>
-							<div class="name-character">m</div>
-							<div class="name-character">i</div>
-							<div class="name-character">d</div>
-							<div class="name-character">á</div>
-							<div class="name-character">n</div>
-						</div>
+                <div class="info">
+                    <div class="myname">
+                <div class="name-wrapper" id="name">
+                            <div class="name-character">S</div>
+                            <div class="name-character">e</div>
+                            <div class="name-character">m</div>
+                            <div class="name-character">i</div>
+                            <div class="name-character">d</div>
+                            <div class="name-character">á</div>
+                            <div class="name-character">n</div>
+                        </div>
 
-						<div class="name-wrapper" id="surname1">
-							<div class="name-character">R</div>
-							<div class="name-character">o</div>
-							<div class="name-character">b</div>
-							<div class="name-character">a</div>
-							<div class="name-character">i</div>
-							<div class="name-character">n</div>
-							<div class="name-character">a</div>
-		        </div>
+                        <div class="name-wrapper" id="surname1">
+                            <div class="name-character">R</div>
+                            <div class="name-character">o</div>
+                            <div class="name-character">b</div>
+                            <div class="name-character">a</div>
+                            <div class="name-character">i</div>
+                            <div class="name-character">n</div>
+                            <div class="name-character">a</div>
+                </div>
 
-		        <div class="name-wrapper" id="surname2">
-							<div class="name-character">E</div>
-							<div class="name-character">s</div>
-							<div class="name-character">t</div>
-							<div class="name-character">é</div>
-							<div class="name-character">v</div>
-							<div class="name-character">e</div>
-							<div class="name-character">z</div>
-						</div>
-					</div>
+                <div class="name-wrapper" id="surname2">
+                            <div class="name-character">E</div>
+                            <div class="name-character">s</div>
+                            <div class="name-character">t</div>
+                            <div class="name-character">é</div>
+                            <div class="name-character">v</div>
+                            <div class="name-character">e</div>
+                            <div class="name-character">z</div>
+                        </div>
+                    </div>
 
-					<div class="myrol">
-						Researcher, developer, writer
-					</div>
-				</div>
+                    <div class="myrol">
+                        Researcher, developer, writer
+                    </div>
+                </div>
 
-			</div>
+            </div>
 
-			<footer id="footer"></footer>
+            <footer id="footer"></footer>
 
-		</div>
+        </div>
 
     <script src="/js/artwork.js"></script>
-		<script src="/js/settings.js"></script>
+        <script src="/js/settings.js"></script>
 
   </body>
 </html>
