--- a/assets/blog-page-template.html
+++ b/assets/blog-page-template.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Semidán: Blog</title>
-		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/imgs/logo1.png">
     <link rel="stylesheet" href="/css/master.css">
-    <link rel="stylesheet" href="/css/blog.css">
+    <link rel="stylesheet" href="/css/blog_page_template.css">
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -14,17 +14,16 @@
     <script src="/js/settings.js"></script>
     <script>
       $(function() {
-        $("#navbar").load("navbar.html");
+        $("#navbar").load("/navbar.html");
       });
       $(function() {
-        $("#footer").load("credits.html");
+        $("#footer").load("/credits.html");
       });
       let logo = new Image();
       logo.src = "/imgs/logo1.png";
     </script>
 
   </head>
-
 
   <body>
 
@@ -33,12 +32,23 @@
 
         <div class="navbar-container" id="navbar"></div>
 
-        <h1>Coming soon...</h1>
+        <div class="blog-wrap">
 
-        <!-- <a href="/blog-entries/about-science">Why is biology different?</a> -->
+          <div class="blog-title">
+            <p>Title</p>
+          </div>
+
+          <article class="blog-content">
+
+            <p id="preview">Preview text</p>
+
+          </article>
+
+        </div>
+
+
       </div>
-
-      <footer id="footer"></footer>
+      	<footer id="footer"></footer>
     </div>
 
   </body>
