--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Semidán: Contact</title>
-		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/contact.css">
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
@@ -13,10 +13,10 @@
     <script src="/js/transitions.js"></script>
     <script>
       $(function() {
-        $("#navbar").load("navbar.html");
+        $("#navbar").load("/navbar.html");
       });
       $(function() {
-        $("#footer").load("credits.html");
+        $("#footer").load("/credits.html");
       });
       let logo = new Image();
       logo.src = "/imgs/logo1.png";
