--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Semidán: Research</title>
-		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/research.css">
     <script src="/js/transitions.js"></script>
@@ -14,10 +14,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
       $(function() {
-        $("#navbar").load("navbar.html");
+        $("#navbar").load("/navbar.html");
       });
       $(function() {
-        $("#footer").load("credits.html");
+        $("#footer").load("/credits.html");
       });
       let logo = new Image();
       logo.src = "/imgs/logo1.png";
