some updates to styles

--- a/blog-navigator.html
+++ b/blog-navigator.html
@@ -2,7 +2,7 @@
   <i class="fas fa-reply"></i>
 </div>
 
-<a href="\blog\index" id="center-blog-navigator-button" class="blog-navigator-button">
+<a href="\blog\" id="center-blog-navigator-button" class="blog-navigator-button">
   <i class="fas fa-list-ul"></i>
 </a>
 
