--- a/assets/blog-page-template.html
+++ b/assets/blog-page-template.html
@@ -7,17 +7,21 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/imgs/logo1.png">
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/blog_page_template.css">
+    <script src="https://kit.fontawesome.com/b74ab0dc19.js"></script>
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="/js/transitions.js"></script>
     <script src="/js/settings.js"></script>
+    <script src="/js/blog-entry.js"></script>
     <script>
       $(function() {
         $("#navbar").load("/navbar.html");
       });
       $(function() {
         $("#footer").load("/credits.html");
+      });
+      $(function() {
+        $("#blog-navigator").load("/blog-navigator.html");
       });
       let logo = new Image();
       logo.src = "/imgs/logo1.png";
@@ -40,7 +44,7 @@
 
           <article class="blog-content">
 
-            <p id="preview">Preview text</p>
+            <p>Preview text</p>
 
           </article>
 
@@ -49,6 +53,7 @@
 
       </div>
       	<footer id="footer"></footer>
+        <div id="blog-navigator"></div>
     </div>
 
   </body>
